# esp32_ota_dht

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.ci.anti_rollback  sdkconfig.old
.github/workflows/: main.yml
main/: CMakeLists.txt  Kconfig.projbuild  dht.c  main.c  user_https_ota.c  wifi_utils.c
main/include/: user_https_ota.h
server_certs/: ca_cert.pem
